--- a/style.css
+++ b/style.css
@@ -18,8 +18,11 @@
 }
 
 @media (max-width:768px) {
-.matrix { text-align: center;
-}
+
+    .matrix { 
+        text-align: center;
+    }
+
 }
 .container {
     display: block;
