--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
 .task {
     width: 56%;
     display: inline-block;
-    flex-grow: 1
+    flex-grow: 1;
 }
 .wrapper {
     display: flex;
@@ -119,7 +119,7 @@ input,button{
     width: 226px;
 }
 .task-item >    .task-text {
-    width: 226px
+    width: 226px;
 }
 .delete .remove-sign {
     height: 2em;
@@ -132,18 +132,18 @@ input,button{
 
 /* Completed */
 .task-list#completed-tasks .task {
-    text-decoration: line-through
+    text-decoration: line-through;
     color: #888;
 }
 
 /* Edit Task */
 .task-list .task-item .task-text {
-    display: none
+    display: none;
 }
 
 .task-list .task-item.edit-mode input[type=text] {
     display: inline-block;
-    width: 224px
+    width: 224px;
 }
 
 .task-list .task-item.edit-mode .task {
